--- a/wcfsetup/install/files/style/ui/article.scss
+++ b/wcfsetup/install/files/style/ui/article.scss
@@ -43,14 +43,6 @@
 			display: inline;
 		}
 	}
-	
-	.htmlContent {
-		@include clearfix;
-		
-		img {
-			max-width: 100%;
-		}
-	}
 }
 
 .articleAboutAuthor {
